Rajouter word cloud pour analyse des données.

--- a/explore_data.ipynb
+++ b/explore_data.ipynb
@@ -9,28 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\dev\\systemes\\eia\\pytorch-llm-fundamentals\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Encoding(num_tokens=42, attributes=[ids, type_ids, tokens, offsets, attention_mask, special_tokens_mask, overflowing])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
@@ -38,9 +19,9 @@
     "with open('./data/scitechnews.pkl', 'rb') as file:\n",
     "    dataset =  pickle.load(file, encoding=\"latin1\")\n",
     "    \n",
-    "example = dataset['train'][0]\n",
+    "# example = dataset['train'][0]\n",
     "\n",
-    "example"
+    "# example"
    ]
   },
   {
@@ -52,25 +33,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequence length: 42\n",
-      "ids: [101, 2043, 2047, 2259, 2103, 2623, 2006, 9857, 2008, 2009, 2052, 2574, 5478, 2111, 2000, 2265, 6947, 1997, 2012, 2560, 2028, 21887, 23350, 17404, 2915, 2000, 4607, 5661, 1010, 3664, 3021, 2139, 1038, 8523, 3695, 2056, 1996, 2291, 2001, 1000, 3722, 102]\n",
-      "tokens: ['[CLS]', 'when', 'new', 'york', 'city', 'announced', 'on', 'tuesday', 'that', 'it', 'would', 'soon', 'require', 'people', 'to', 'show', 'proof', 'of', 'at', 'least', 'one', 'corona', '##virus', 'vaccine', 'shot', 'to', 'enter', 'businesses', ',', 'mayor', 'bill', 'de', 'b', '##las', '##io', 'said', 'the', 'system', 'was', '\"', 'simple', '[SEP]']\n",
-      "attention_mask: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(f\"sequence length: {len(example.ids)}\")\n",
-    "print(f\"ids: {example.ids}\")\n",
-    "print(f\"tokens: {example.tokens}\")\n",
-    "print(f\"attention_mask: {example.attention_mask}\")"
+    "# print(f\"sequence length: {len(example.ids)}\")\n",
+    "# print(f\"ids: {example.ids}\")\n",
+    "# print(f\"tokens: {example.tokens}\")\n",
+    "# print(f\"attention_mask: {example.attention_mask}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "stopwords = set(STOPWORDS)\n",
+    "\n",
+    "train_data = dataset['train']\n",
+    "content = \"\"\n",
+    "\n",
+    "for encoding in train_data.encodings:\n",
+    "    tokens = encoding.tokens\n",
+    "    content += ' '.join(tokens) + ' '\n",
+    "    \n",
+    "wordcloud = WordCloud(width = 800, height = 800,\n",
+    "                background_color ='white',\n",
+    "                stopwords = stopwords,\n",
+    "                min_font_size = 10).generate(content)\n",
+    "\n",
+    "# plot the WordCloud image                       \n",
+    "plt.figure(figsize = (8, 8), facecolor = None)\n",
+    "plt.imshow(wordcloud)\n",
+    "plt.axis(\"off\")\n",
+    "plt.tight_layout(pad = 0)\n",
+    " \n",
+    "plt.show()"
    ]
   }
  ],
